# encalloc

./: .gitignore  CMakeLists.txt  README.md
include/: assert-print.h  encalloc.h
src/: encalloc-simple.c  encalloc.c
tests/: test-double-free.c
